# rsj_tutorial_2017

./: README.md
rsj_pick_and_place/: CMakeLists.txt  package.xml
rsj_pick_and_place/config/: picknplace.rviz
rsj_pick_and_place/src/: pick_and_place.cpp  pick_and_place.py
rsj_work_cell_description/: CMakeLists.txt  package.xml
rsj_work_cell_description/urdf/: work_cell.urdf.xacro
rsj_work_cell_hardware/: CMakeLists.txt  package.xml
rsj_work_cell_hardware/config/: vizualisation.rviz  work_cell_moveit.rviz
rsj_work_cell_hardware/launch/: start_work_cell.launch
rsj_work_cell_simulation/: CMakeLists.txt  package.xml
rsj_work_cell_simulation/launch/: simulation.launch
